rework windows launch script
fixes

fix jvm.options parsing

windows compatible URI